# stonks_java/src/main/java/dev/pollito/stonks_java/trade/adapter/in/rest/TradeController.java
@@ -5,12 +5,16 @@ import static java.time.OffsetDateTime.now;
 import static org.springframework.http.HttpStatus.OK;
 
 import dev.pollito.stonks_java.generated.api.TradesApi;
+import dev.pollito.stonks_java.generated.model.TradeExecutionRequest;
+import dev.pollito.stonks_java.generated.model.TradeExecutionResponse;
+import dev.pollito.stonks_java.generated.model.TradeHistoryResponse;
 import dev.pollito.stonks_java.generated.model.TradeValidationRequest;
 import dev.pollito.stonks_java.generated.model.TradeValidationResponse;
 import dev.pollito.stonks_java.trade.adapter.in.rest.mapper.TradeRestMapper;
 import dev.pollito.stonks_java.trade.application.port.in.TradePortIn;
 import jakarta.servlet.http.HttpServletRequest;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Pageable;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -31,5 +35,16 @@ public class TradeController implements TradesApi {
             .timestamp(now())
             .trace(current().getSpanContext().getTraceId())
             .data(mapper.map(tradePortIn.validateTrade(mapper.map(tradeValidationRequest)))));
+  }
+
+  @Override
+  public ResponseEntity<TradeExecutionResponse> executeTrade(
+      TradeExecutionRequest tradeExecutionRequest) {
+    throw new UnsupportedOperationException();
+  }
+
+  @Override
+  public ResponseEntity<TradeHistoryResponse> getTradeHistory(Pageable pageable) {
+    throw new UnsupportedOperationException();
   }
 }
